frontend/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> program element
Rule 3     element -> declaration Semi
Rule 4     element -> function
Rule 5     program -> empty
Rule 6     type -> Int
Rule 7     function -> type Identifier LParen RParen LBrace block RBrace
Rule 8     function -> type Identifier LParen parameter RParen LBrace block RBrace
Rule 9     parameter -> parameter parameter_item
Rule 10    parameter -> empty
Rule 11    parameter_item -> Comma declaration
Rule 12    parameter_item -> declaration
Rule 13    block -> block block_item
Rule 14    block -> empty
Rule 15    block_item -> statement
Rule 16    block_item -> declaration Semi
Rule 17    statement -> statement_matched
Rule 18    statement -> statement_unmatched
Rule 19    statement_matched -> If LParen expression RParen statement_matched Else statement_matched
Rule 20    statement_unmatched -> If LParen expression RParen statement_matched Else statement_unmatched
Rule 21    statement_unmatched -> If LParen expression RParen statement
Rule 22    statement_matched -> While LParen expression RParen statement_matched
Rule 23    statement_unmatched -> While LParen expression RParen statement_unmatched
Rule 24    statement_matched -> Do statement_matched While expression Semi
Rule 25    statement_unmatched -> Do statement_unmatched While expression Semi
Rule 26    statement_matched -> For LParen expression Semi expression Semi expression RParen statement_matched
Rule 27    statement_matched -> For LParen declaration Semi expression Semi expression RParen statement_matched
Rule 28    statement_unmatched -> For LParen expression Semi expression Semi expression RParen statement_unmatched
Rule 29    statement_unmatched -> For LParen declaration Semi expression Semi expression RParen statement_unmatched
Rule 30    statement_matched -> For LParen Semi expression Semi expression RParen statement_matched
Rule 31    statement_unmatched -> For LParen Semi expression Semi expression RParen statement_unmatched
Rule 32    statement_matched -> For LParen expression Semi Semi expression RParen statement_matched
Rule 33    statement_matched -> For LParen declaration Semi Semi expression RParen statement_matched
Rule 34    statement_unmatched -> For LParen expression Semi Semi expression RParen statement_unmatched
Rule 35    statement_unmatched -> For LParen declaration Semi Semi expression RParen statement_unmatched
Rule 36    statement_matched -> For LParen expression Semi expression Semi RParen statement_matched
Rule 37    statement_matched -> For LParen declaration Semi expression Semi RParen statement_matched
Rule 38    statement_unmatched -> For LParen expression Semi expression Semi RParen statement_unmatched
Rule 39    statement_unmatched -> For LParen declaration Semi expression Semi RParen statement_unmatched
Rule 40    statement_matched -> For LParen expression Semi Semi RParen statement_matched
Rule 41    statement_matched -> For LParen declaration Semi Semi RParen statement_matched
Rule 42    statement_unmatched -> For LParen expression Semi Semi RParen statement_unmatched
Rule 43    statement_unmatched -> For LParen declaration Semi Semi RParen statement_unmatched
Rule 44    statement_matched -> For LParen Semi expression Semi RParen statement_matched
Rule 45    statement_unmatched -> For LParen Semi expression Semi RParen statement_unmatched
Rule 46    statement_matched -> For LParen Semi Semi expression RParen statement_matched
Rule 47    statement_unmatched -> For LParen Semi Semi expression RParen statement_unmatched
Rule 48    statement_matched -> For LParen Semi Semi RParen statement_matched
Rule 49    statement_unmatched -> For LParen Semi Semi RParen statement_unmatched
Rule 50    statement_matched -> Return expression Semi
Rule 51    statement_matched -> opt_expression Semi
Rule 52    statement_matched -> LBrace block RBrace
Rule 53    statement_matched -> Break Semi
Rule 54    statement_matched -> Continue Semi
Rule 55    opt_expression -> expression
Rule 56    opt_expression -> empty
Rule 57    declaration -> type Identifier
Rule 58    declaration -> type Identifier Assign expression
Rule 59    expression -> assignment
Rule 60    assignment -> conditional
Rule 61    conditional -> logical_or
Rule 62    logical_or -> logical_and
Rule 63    logical_and -> bit_or
Rule 64    bit_or -> xor
Rule 65    xor -> bit_and
Rule 66    bit_and -> equality
Rule 67    equality -> relational
Rule 68    relational -> additive
Rule 69    additive -> multiplicative
Rule 70    multiplicative -> unary
Rule 71    unary -> postfix
Rule 72    postfix -> primary
Rule 73    postfix -> Identifier LParen expression_list RParen
Rule 74    expression_list -> expression_list expression_item
Rule 75    expression_list -> empty
Rule 76    expression_item -> Comma expression
Rule 77    expression_item -> expression
Rule 78    unary -> Minus unary
Rule 79    unary -> BitNot unary
Rule 80    unary -> Not unary
Rule 81    assignment -> Identifier Assign expression
Rule 82    logical_or -> logical_or Or logical_and
Rule 83    logical_and -> logical_and And bit_or
Rule 84    bit_or -> bit_or BitOr xor
Rule 85    xor -> xor Xor bit_and
Rule 86    bit_and -> bit_and BitAnd equality
Rule 87    equality -> equality NotEqual relational
Rule 88    equality -> equality Equal relational
Rule 89    relational -> relational Less additive
Rule 90    relational -> relational Greater additive
Rule 91    relational -> relational LessEqual additive
Rule 92    relational -> relational GreaterEqual additive
Rule 93    additive -> additive Plus multiplicative
Rule 94    additive -> additive Minus multiplicative
Rule 95    multiplicative -> multiplicative Mul unary
Rule 96    multiplicative -> multiplicative Div unary
Rule 97    multiplicative -> multiplicative Mod unary
Rule 98    conditional -> logical_or Question expression Colon conditional
Rule 99    primary -> Integer
Rule 100   primary -> Identifier
Rule 101   primary -> LParen expression RParen

Terminals, with rules where they appear

And                  : 83
Assign               : 58 81
BitAnd               : 86
BitNot               : 79
BitOr                : 84
Break                : 53
Colon                : 98
Comma                : 11 76
Continue             : 54
Div                  : 96
Do                   : 24 25
Else                 : 19 20
Equal                : 88
For                  : 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
Greater              : 90
GreaterEqual         : 92
Identifier           : 7 8 57 58 73 81 100
If                   : 19 20 21
Int                  : 6
Integer              : 99
LBrace               : 7 8 52
LParen               : 7 8 19 20 21 22 23 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 73 101
Less                 : 89
LessEqual            : 91
Minus                : 78 94
Mod                  : 97
Mul                  : 95
Not                  : 80
NotEqual             : 87
Or                   : 82
Plus                 : 93
Question             : 98
RBrace               : 7 8 52
RParen               : 7 8 19 20 21 22 23 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 73 101
Return               : 50
Semi                 : 3 16 24 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 51 53 54
While                : 22 23 24 25
Xor                  : 85
error                : 

Nonterminals, with rules where they appear

additive             : 68 89 90 91 92 93 94
assignment           : 59
bit_and              : 65 85 86
bit_or               : 63 83 84
block                : 7 8 13 52
block_item           : 13
conditional          : 60 98
declaration          : 3 11 12 16 27 29 33 35 37 39 41 43
element              : 2
empty                : 5 10 14 56 75
equality             : 66 86 87 88
expression           : 19 20 21 22 23 24 25 26 26 26 27 27 28 28 28 29 29 30 30 31 31 32 32 33 34 34 35 36 36 37 38 38 39 40 42 44 45 46 47 50 55 58 76 77 81 98 101
expression_item      : 74
expression_list      : 73 74
function             : 4
logical_and          : 62 82 83
logical_or           : 61 82 98
multiplicative       : 69 93 94 95 96 97
opt_expression       : 51
parameter            : 8 9
parameter_item       : 9
postfix              : 71
primary              : 72
program              : 2 0
relational           : 67 87 88 89 90 91 92
statement            : 15 21
statement_matched    : 17 19 19 20 22 24 26 27 30 32 33 36 37 40 41 44 46 48
statement_unmatched  : 18 20 23 25 28 29 31 34 35 38 39 42 43 45 47 49
type                 : 7 8 57 58
unary                : 70 78 79 80 95 96 97
xor                  : 64 84 85

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . program element
    (5) program -> . empty
    (1) empty -> .

    Int             reduce using rule 1 (empty -> .)
    $end            reduce using rule 1 (empty -> .)

    program                        shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> program .
    (2) program -> program . element
    (3) element -> . declaration Semi
    (4) element -> . function
    (57) declaration -> . type Identifier
    (58) declaration -> . type Identifier Assign expression
    (7) function -> . type Identifier LParen RParen LBrace block RBrace
    (8) function -> . type Identifier LParen parameter RParen LBrace block RBrace
    (6) type -> . Int

    Int             shift and go to state 7

    element                        shift and go to state 3
    declaration                    shift and go to state 4
    function                       shift and go to state 5
    type                           shift and go to state 6

state 2

    (5) program -> empty .

    Int             reduce using rule 5 (program -> empty .)
    $end            reduce using rule 5 (program -> empty .)


state 3

    (2) program -> program element .

    Int             reduce using rule 2 (program -> program element .)
    $end            reduce using rule 2 (program -> program element .)


state 4

    (3) element -> declaration . Semi

    Semi            shift and go to state 8


state 5

    (4) element -> function .

    Int             reduce using rule 4 (element -> function .)
    $end            reduce using rule 4 (element -> function .)


state 6

    (57) declaration -> type . Identifier
    (58) declaration -> type . Identifier Assign expression
    (7) function -> type . Identifier LParen RParen LBrace block RBrace
    (8) function -> type . Identifier LParen parameter RParen LBrace block RBrace

    Identifier      shift and go to state 9


state 7

    (6) type -> Int .

    Identifier      reduce using rule 6 (type -> Int .)


state 8

    (3) element -> declaration Semi .

    Int             reduce using rule 3 (element -> declaration Semi .)
    $end            reduce using rule 3 (element -> declaration Semi .)


state 9

    (57) declaration -> type Identifier .
    (58) declaration -> type Identifier . Assign expression
    (7) function -> type Identifier . LParen RParen LBrace block RBrace
    (8) function -> type Identifier . LParen parameter RParen LBrace block RBrace

    Semi            reduce using rule 57 (declaration -> type Identifier .)
    Assign          shift and go to state 10
    LParen          shift and go to state 11


state 10

    (58) declaration -> type Identifier Assign . expression
    (59) expression -> . assignment
    (60) assignment -> . conditional
    (81) assignment -> . Identifier Assign expression
    (61) conditional -> . logical_or
    (98) conditional -> . logical_or Question expression Colon conditional
    (62) logical_or -> . logical_and
    (82) logical_or -> . logical_or Or logical_and
    (63) logical_and -> . bit_or
    (83) logical_and -> . logical_and And bit_or
    (64) bit_or -> . xor
    (84) bit_or -> . bit_or BitOr xor
    (65) xor -> . bit_and
    (85) xor -> . xor Xor bit_and
    (66) bit_and -> . equality
    (86) bit_and -> . bit_and BitAnd equality
    (67) equality -> . relational
    (87) equality -> . equality NotEqual relational
    (88) equality -> . equality Equal relational
    (68) relational -> . additive
    (89) relational -> . relational Less additive
    (90) relational -> . relational Greater additive
    (91) relational -> . relational LessEqual additive
    (92) relational -> . relational GreaterEqual additive
    (69) additive -> . multiplicative
    (93) additive -> . additive Plus multiplicative
    (94) additive -> . additive Minus multiplicative
    (70) multiplicative -> . unary
    (95) multiplicative -> . multiplicative Mul unary
    (96) multiplicative -> . multiplicative Div unary
    (97) multiplicative -> . multiplicative Mod unary
    (71) unary -> . postfix
    (78) unary -> . Minus unary
    (79) unary -> . BitNot unary
    (80) unary -> . Not unary
    (72) postfix -> . primary
    (73) postfix -> . Identifier LParen expression_list RParen
    (99) primary -> . Integer
    (100) primary -> . Identifier
    (101) primary -> . LParen expression RParen

    Identifier      shift and go to state 12
    Minus           shift and go to state 25
    BitNot          shift and go to state 28
    Not             shift and go to state 29
    Integer         shift and go to state 32
    LParen          shift and go to state 31

    expression                     shift and go to state 13
    assignment                     shift and go to state 14
    conditional                    shift and go to state 15
    logical_or                     shift and go to state 16
    logical_and                    shift and go to state 17
    bit_or                         shift and go to state 18
    xor                            shift and go to state 19
    bit_and                        shift and go to state 20
    equality                       shift and go to state 21
    relational                     shift and go to state 22
    additive                       shift and go to state 23
    multiplicative                 shift and go to state 24
    unary                          shift and go to state 26
    postfix                        shift and go to state 27
    primary                        shift and go to state 30

state 11

    (7) function -> type Identifier LParen . RParen LBrace block RBrace
    (8) function -> type Identifier LParen . parameter RParen LBrace block RBrace
    (9) parameter -> . parameter parameter_item
    (10) parameter -> . empty
    (1) empty -> .

  ! shift/reduce conflict for RParen resolved as shift
    RParen          shift and go to state 33
    Comma           reduce using rule 1 (empty -> .)
    Int             reduce using rule 1 (empty -> .)

  ! RParen          [ reduce using rule 1 (empty -> .) ]

    parameter                      shift and go to state 34
    empty                          shift and go to state 35

state 12

    (81) assignment -> Identifier . Assign expression
    (73) postfix -> Identifier . LParen expression_list RParen
    (100) primary -> Identifier .

  ! shift/reduce conflict for LParen resolved as shift
    Assign          shift and go to state 36
    LParen          shift and go to state 37
    Mul             reduce using rule 100 (primary -> Identifier .)
    Div             reduce using rule 100 (primary -> Identifier .)
    Mod             reduce using rule 100 (primary -> Identifier .)
    Plus            reduce using rule 100 (primary -> Identifier .)
    Minus           reduce using rule 100 (primary -> Identifier .)
    Less            reduce using rule 100 (primary -> Identifier .)
    Greater         reduce using rule 100 (primary -> Identifier .)
    LessEqual       reduce using rule 100 (primary -> Identifier .)
    GreaterEqual    reduce using rule 100 (primary -> Identifier .)
    NotEqual        reduce using rule 100 (primary -> Identifier .)
    Equal           reduce using rule 100 (primary -> Identifier .)
    BitAnd          reduce using rule 100 (primary -> Identifier .)
    Xor             reduce using rule 100 (primary -> Identifier .)
    BitOr           reduce using rule 100 (primary -> Identifier .)
    And             reduce using rule 100 (primary -> Identifier .)
    Question        reduce using rule 100 (primary -> Identifier .)
    Or              reduce using rule 100 (primary -> Identifier .)
    Semi            reduce using rule 100 (primary -> Identifier .)
    RParen          reduce using rule 100 (primary -> Identifier .)
    Comma           reduce using rule 100 (primary -> Identifier .)
    Int             reduce using rule 100 (primary -> Identifier .)
    Colon           reduce using rule 100 (primary -> Identifier .)
    Identifier      reduce using rule 100 (primary -> Identifier .)
    BitNot          reduce using rule 100 (primary -> Identifier .)
    Not             reduce using rule 100 (primary -> Identifier .)
    Integer         reduce using rule 100 (primary -> Identifier .)

  ! LParen          [ reduce using rule 100 (primary -> Identifier .) ]


state 13

    (58) declaration -> type Identifier Assign expression .

    Semi            reduce using rule 58 (declaration -> type Identifier Assign expression .)
    RParen          reduce using rule 58 (declaration -> type Identifier Assign expression .)
    Comma           reduce using rule 58 (declaration -> type Identifier Assign expression .)
    Int             reduce using rule 58 (declaration -> type Identifier Assign expression .)


state 14

    (59) expression -> assignment .

    Semi            reduce using rule 59 (expression -> assignment .)
    RParen          reduce using rule 59 (expression -> assignment .)
    Comma           reduce using rule 59 (expression -> assignment .)
    Int             reduce using rule 59 (expression -> assignment .)
    Colon           reduce using rule 59 (expression -> assignment .)
    Identifier      reduce using rule 59 (expression -> assignment .)
    Minus           reduce using rule 59 (expression -> assignment .)
    BitNot          reduce using rule 59 (expression -> assignment .)
    Not             reduce using rule 59 (expression -> assignment .)
    Integer         reduce using rule 59 (expression -> assignment .)
    LParen          reduce using rule 59 (expression -> assignment .)


state 15

    (60) assignment -> conditional .

    Semi            reduce using rule 60 (assignment -> conditional .)
    RParen          reduce using rule 60 (assignment -> conditional .)
    Comma           reduce using rule 60 (assignment -> conditional .)
    Int             reduce using rule 60 (assignment -> conditional .)
    Colon           reduce using rule 60 (assignment -> conditional .)
    Identifier      reduce using rule 60 (assignment -> conditional .)
    Minus           reduce using rule 60 (assignment -> conditional .)
    BitNot          reduce using rule 60 (assignment -> conditional .)
    Not             reduce using rule 60 (assignment -> conditional .)
    Integer         reduce using rule 60 (assignment -> conditional .)
    LParen          reduce using rule 60 (assignment -> conditional .)


state 16

    (61) conditional -> logical_or .
    (98) conditional -> logical_or . Question expression Colon conditional
    (82) logical_or -> logical_or . Or logical_and

    Semi            reduce using rule 61 (conditional -> logical_or .)
    RParen          reduce using rule 61 (conditional -> logical_or .)
    Comma           reduce using rule 61 (conditional -> logical_or .)
    Int             reduce using rule 61 (conditional -> logical_or .)
    Colon           reduce using rule 61 (conditional -> logical_or .)
    Identifier      reduce using rule 61 (conditional -> logical_or .)
    Minus           reduce using rule 61 (conditional -> logical_or .)
    BitNot          reduce using rule 61 (conditional -> logical_or .)
    Not             reduce using rule 61 (conditional -> logical_or .)
    Integer         reduce using rule 61 (conditional -> logical_or .)
    LParen          reduce using rule 61 (conditional -> logical_or .)
    Question        shift and go to state 38
    Or              shift and go to state 39


state 17

    (62) logical_or -> logical_and .
    (83) logical_and -> logical_and . And bit_or

    Question        reduce using rule 62 (logical_or -> logical_and .)
    Or              reduce using rule 62 (logical_or -> logical_and .)
    Semi            reduce using rule 62 (logical_or -> logical_and .)
    RParen          reduce using rule 62 (logical_or -> logical_and .)
    Comma           reduce using rule 62 (logical_or -> logical_and .)
    Int             reduce using rule 62 (logical_or -> logical_and .)
    Colon           reduce using rule 62 (logical_or -> logical_and .)
    Identifier      reduce using rule 62 (logical_or -> logical_and .)
    Minus           reduce using rule 62 (logical_or -> logical_and .)
    BitNot          reduce using rule 62 (logical_or -> logical_and .)
    Not             reduce using rule 62 (logical_or -> logical_and .)
    Integer         reduce using rule 62 (logical_or -> logical_and .)
    LParen          reduce using rule 62 (logical_or -> logical_and .)
    And             shift and go to state 40


state 18

    (63) logical_and -> bit_or .
    (84) bit_or -> bit_or . BitOr xor

    And             reduce using rule 63 (logical_and -> bit_or .)
    Question        reduce using rule 63 (logical_and -> bit_or .)
    Or              reduce using rule 63 (logical_and -> bit_or .)
    Semi            reduce using rule 63 (logical_and -> bit_or .)
    RParen          reduce using rule 63 (logical_and -> bit_or .)
    Comma           reduce using rule 63 (logical_and -> bit_or .)
    Int             reduce using rule 63 (logical_and -> bit_or .)
    Colon           reduce using rule 63 (logical_and -> bit_or .)
    Identifier      reduce using rule 63 (logical_and -> bit_or .)
    Minus           reduce using rule 63 (logical_and -> bit_or .)
    BitNot          reduce using rule 63 (logical_and -> bit_or .)
    Not             reduce using rule 63 (logical_and -> bit_or .)
    Integer         reduce using rule 63 (logical_and -> bit_or .)
    LParen          reduce using rule 63 (logical_and -> bit_or .)
    BitOr           shift and go to state 41


state 19

    (64) bit_or -> xor .
    (85) xor -> xor . Xor bit_and

    BitOr           reduce using rule 64 (bit_or -> xor .)
    And             reduce using rule 64 (bit_or -> xor .)
    Question        reduce using rule 64 (bit_or -> xor .)
    Or              reduce using rule 64 (bit_or -> xor .)
    Semi            reduce using rule 64 (bit_or -> xor .)
    RParen          reduce using rule 64 (bit_or -> xor .)
    Comma           reduce using rule 64 (bit_or -> xor .)
    Int             reduce using rule 64 (bit_or -> xor .)
    Colon           reduce using rule 64 (bit_or -> xor .)
    Identifier      reduce using rule 64 (bit_or -> xor .)
    Minus           reduce using rule 64 (bit_or -> xor .)
    BitNot          reduce using rule 64 (bit_or -> xor .)
    Not             reduce using rule 64 (bit_or -> xor .)
    Integer         reduce using rule 64 (bit_or -> xor .)
    LParen          reduce using rule 64 (bit_or -> xor .)
    Xor             shift and go to state 42


state 20

    (65) xor -> bit_and .
    (86) bit_and -> bit_and . BitAnd equality

    Xor             reduce using rule 65 (xor -> bit_and .)
    BitOr           reduce using rule 65 (xor -> bit_and .)
    And             reduce using rule 65 (xor -> bit_and .)
    Question        reduce using rule 65 (xor -> bit_and .)
    Or              reduce using rule 65 (xor -> bit_and .)
    Semi            reduce using rule 65 (xor -> bit_and .)
    RParen          reduce using rule 65 (xor -> bit_and .)
    Comma           reduce using rule 65 (xor -> bit_and .)
    Int             reduce using rule 65 (xor -> bit_and .)
    Colon           reduce using rule 65 (xor -> bit_and .)
    Identifier      reduce using rule 65 (xor -> bit_and .)
    Minus           reduce using rule 65 (xor -> bit_and .)
    BitNot          reduce using rule 65 (xor -> bit_and .)
    Not             reduce using rule 65 (xor -> bit_and .)
    Integer         reduce using rule 65 (xor -> bit_and .)
    LParen          reduce using rule 65 (xor -> bit_and .)
    BitAnd          shift and go to state 43


state 21

    (66) bit_and -> equality .
    (87) equality -> equality . NotEqual relational
    (88) equality -> equality . Equal relational
